--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
   padding: 0px;
 }
 
-input[type=range] {
-  accent-color: #FFB400;
+input[type="range"] {
+  accent-color: #ffb400;
   width: 80%;
   margin-left: 10%;
 }
@@ -14,7 +14,7 @@ input[type=range] {
   margin: auto;
   padding-bottom: 20px;
   padding-top: 20px;
-  background-color: #FFB400;
+  background-color: #ffb400;
 }
 
 .main-container .card {
@@ -23,7 +23,7 @@ input[type=range] {
   display: flex;
   width: 60%;
   margin: auto;
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
   border-radius: 20px;
 }
 
@@ -47,7 +47,7 @@ input[type=range] {
 }
 
 .main-container .card .block1 .role {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
@@ -82,14 +82,67 @@ input[type=range] {
   margin-top: 20px;
 }
 
-.main-container .card .block1 .icons img {
-  display: block;
-  width: 15px;
-  height: 15px;
+.main-container .card .block1 .icons .facebook {
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  background-color: #ffb400;
   border-radius: 50px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  background-color: #FFB400;
+}
+
+.main-container .card .block1 .icons .facebook img {
+  width: 30px;
+  height: 30px;
+}
+
+.main-container .card .block1 .icons .linkedin {
+  display: block;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  background-color: #ffb400;
+  border-radius: 50px;
+}
+
+.main-container .card .block1 .icons .linkedin img {
+  display: block;
+  margin: auto;
+  margin-top: 5px;
+  width: 20px;
+  height: 20px;
+}
+
+.main-container .card .block1 .icons .twitter {
+  display: block;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  background-color: #ffb400;
+  border-radius: 50px;
+}
+
+.main-container .card .block1 .icons .twitter img {
+  display: block;
+  margin: auto;
+  width: 30px;
+  height: 30px;
+}
+
+.main-container .card .block1 .icons .instagram {
+  display: block;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  background-color: #ffb400;
+  border-radius: 50px;
+}
+
+.main-container .card .block1 .icons .instagram img {
+  display: block;
+  margin: auto;
+  margin-top: 3px;
+  width: 25px;
+  height: 25px;
 }
 
 .main-container .card .block1 .empty-block {
@@ -99,7 +152,17 @@ input[type=range] {
   background-color: #636161;
 }
 
-.main-container .card .block1 .age, .main-container .card .block1 .residence, .main-container .card .block1 .freelance, .main-container .card .block1 .address, .main-container .card .block1 .languages, .main-container .card .block1 .english, .main-container .card .block1 .hindi, .main-container .card .block1 .skills, .main-container .card .block1 .html, .main-container .card .block1 .css, .main-container .card .block1 .javascript {
+.main-container .card .block1 .age,
+.main-container .card .block1 .residence,
+.main-container .card .block1 .freelance,
+.main-container .card .block1 .address,
+.main-container .card .block1 .languages,
+.main-container .card .block1 .english,
+.main-container .card .block1 .hindi,
+.main-container .card .block1 .skills,
+.main-container .card .block1 .html,
+.main-container .card .block1 .css,
+.main-container .card .block1 .javascript {
   width: 80%;
   margin: 10px auto;
   display: -webkit-box;
@@ -110,7 +173,8 @@ input[type=range] {
           justify-content: space-between;
 }
 
-.main-container .card .block1 .languages, .main-container .card .block1 .skills {
+.main-container .card .block1 .languages,
+.main-container .card .block1 .skills {
   margin-bottom: 20px;
   font-family: Poppins;
   font-size: 15px;
@@ -120,8 +184,12 @@ input[type=range] {
   text-align: left;
 }
 
-.main-container .card .block1 .english, .main-container .card .block1 .hindi, .main-container .card .block1 .html, .main-container .card .block1 .css, .main-container .card .block1 .javascript {
-  font-family: 'Poppins', sans-serif;
+.main-container .card .block1 .english,
+.main-container .card .block1 .hindi,
+.main-container .card .block1 .html,
+.main-container .card .block1 .css,
+.main-container .card .block1 .javascript {
+  font-family: "Poppins", sans-serif;
 }
 
 .main-container .card .block1 .progress1 {
@@ -129,7 +197,7 @@ input[type=range] {
   height: 4px;
   margin: auto;
   margin-left: 10%;
-  background-color: #FFB400;
+  background-color: #ffb400;
 }
 
 .main-container .card .block1 .progress2 {
@@ -137,7 +205,7 @@ input[type=range] {
   height: 4px;
   margin: auto;
   margin-left: 10%;
-  background-color: #FFB400;
+  background-color: #ffb400;
 }
 
 .main-container .card .block1 .progress3 {
@@ -145,7 +213,7 @@ input[type=range] {
   height: 4px;
   margin: auto;
   margin-left: 10%;
-  background-color: #FFB400;
+  background-color: #ffb400;
 }
 
 .main-container .card .block1 .progress4 {
@@ -153,7 +221,7 @@ input[type=range] {
   height: 4px;
   margin: auto;
   margin-left: 10%;
-  background-color: #FFB400;
+  background-color: #ffb400;
 }
 
 .main-container .card .block1 .progress5 {
@@ -161,11 +229,14 @@ input[type=range] {
   height: 4px;
   margin: auto;
   margin-left: 10%;
-  background-color: #FFB400;
+  background-color: #ffb400;
   margin-bottom: 20px;
 }
 
-.main-container .card .block1 .age p:first-child, .main-container .card .block1 .residence p:first-child, .main-container .card .block1 .freelance p:first-child, .main-container .card .block1 .address p:first-child {
+.main-container .card .block1 .age p:first-child,
+.main-container .card .block1 .residence p:first-child,
+.main-container .card .block1 .freelance p:first-child,
+.main-container .card .block1 .address p:first-child {
   font-family: Poppins;
   font-size: 15px;
   font-weight: 600;
@@ -174,27 +245,30 @@ input[type=range] {
   text-align: left;
 }
 
-.main-container .card .block1 .age p:nth-child(2), .main-container .card .block1 .residence p:nth-child(2), .main-container .card .block1 .freelance p:nth-child(2), .main-container .card .block1 .address p:nth-child(2) {
-  font-family: 'Poppins', sans-serif;
+.main-container .card .block1 .age p:nth-child(2),
+.main-container .card .block1 .residence p:nth-child(2),
+.main-container .card .block1 .freelance p:nth-child(2),
+.main-container .card .block1 .address p:nth-child(2) {
+  font-family: "Poppins", sans-serif;
 }
 
 .main-container .card .block2 {
   width: 65%;
   margin-right: 20px;
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
 }
 
 .main-container .card .block2 .personal {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .main-container .card .block2 .personal img {
   display: block;
   width: 130px;
-  height: 250px;
+  height: 320px;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -205,37 +279,45 @@ input[type=range] {
 }
 
 .main-container .card .block2 .personal .information p:nth-child(1) {
-  width: 90%;
-  font-family: 'Poppins', sans-serif;
-  line-height: 36px;
-  font-size: 24px;
+  width: 100%;
+  font-family: "Poppins", sans-serif;
+  line-height: 40px;
+  font-size: 30px;
   letter-spacing: 0px;
   text-align: left;
   margin-bottom: 20px;
 }
 
 .main-container .card .block2 .personal .information p:nth-child(1) span {
-  color: #FFB400;
+  color: #ffb400;
 }
 
 .main-container .card .block2 .personal .information p:nth-child(2) {
   width: 90%;
   margin-bottom: 30px;
-  font-family: 'Roboto Slab', serif;
-  color: #AAA7A7;
-  font-size: 12px;
+  font-family: "Roboto Slab", serif;
+  color: #576574;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .main-container .card .block2 .personal .information button {
-  padding: 8px 28px;
-  font-family: 'Roboto Slab', serif;
-  font-size: 12px;
+  padding: 12px 28px;
+  font-family: "Roboto Slab", serif;
+  font-size: 16px;
   font-weight: 600;
   line-height: 14px;
   letter-spacing: 0px;
   text-align: center;
-  background-color: #FFB400;
+  background-color: #ffb400;
   border: none;
+}
+
+.main-container .card .block2 .personal .information button:hover {
+  background-color: #f4a908;
+  -webkit-box-shadow: 2px 2px 2px #576574;
+          box-shadow: 2px 2px 2px #576574;
+  outline: 3px solid black;
 }
 
 .main-container .card .block2 .mid-section p:nth-child(1) {
@@ -244,7 +326,7 @@ input[type=range] {
   width: fit-content;
   margin: 100px auto 20px auto;
   text-align: center;
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   font-size: 24px;
   font-weight: 600;
 }
@@ -253,8 +335,8 @@ input[type=range] {
   width: 70%;
   margin: auto auto 50px auto;
   text-align: center;
-  font-family: 'Roboto Slab', serif;
-  font-size: 12px;
+  font-family: "Roboto Slab", serif;
+  font-size: 16px;
   color: #636161;
 }
 
@@ -268,13 +350,19 @@ input[type=range] {
   padding-bottom: 30px;
 }
 
-.main-container .card .block2 .technology .web, .main-container .card .block2 .technology .ds-algo, .main-container .card .block2 .technology .javascript, .main-container .card .block2 .technology .mysql {
+.main-container .card .block2 .technology .web,
+.main-container .card .block2 .technology .ds-algo,
+.main-container .card .block2 .technology .javascript,
+.main-container .card .block2 .technology .mysql {
   background-color: #fff;
   -webkit-box-shadow: 0px 6px 6px 0px #00000040;
           box-shadow: 0px 6px 6px 0px #00000040;
 }
 
-.main-container .card .block2 .technology .web img, .main-container .card .block2 .technology .ds-algo img, .main-container .card .block2 .technology .javascript img, .main-container .card .block2 .technology .mysql img {
+.main-container .card .block2 .technology .web img,
+.main-container .card .block2 .technology .ds-algo img,
+.main-container .card .block2 .technology .javascript img,
+.main-container .card .block2 .technology .mysql img {
   width: 50px;
   height: 50px;
   display: block;
@@ -284,8 +372,11 @@ input[type=range] {
   margin: 15px auto;
 }
 
-.main-container .card .block2 .technology .web p:nth-child(2), .main-container .card .block2 .technology .ds-algo p:nth-child(2), .main-container .card .block2 .technology .javascript p:nth-child(2), .main-container .card .block2 .technology .mysql p:nth-child(2) {
-  font-family: 'Roboto Slab', serif;
+.main-container .card .block2 .technology .web p:nth-child(2),
+.main-container .card .block2 .technology .ds-algo p:nth-child(2),
+.main-container .card .block2 .technology .javascript p:nth-child(2),
+.main-container .card .block2 .technology .mysql p:nth-child(2) {
+  font-family: "Roboto Slab", serif;
   font-size: 14px;
   font-weight: 600;
   width: -webkit-fit-content;
@@ -294,10 +385,13 @@ input[type=range] {
   margin: 20px auto;
 }
 
-.main-container .card .block2 .technology .web p:nth-child(3), .main-container .card .block2 .technology .ds-algo p:nth-child(3), .main-container .card .block2 .technology .javascript p:nth-child(3), .main-container .card .block2 .technology .mysql p:nth-child(3) {
-  font-family: 'Roboto Slab', serif;
+.main-container .card .block2 .technology .web p:nth-child(3),
+.main-container .card .block2 .technology .ds-algo p:nth-child(3),
+.main-container .card .block2 .technology .javascript p:nth-child(3),
+.main-container .card .block2 .technology .mysql p:nth-child(3) {
+  font-family: "Roboto Slab", serif;
   font-weight: 400;
-  font-size: 10px;
+  font-size: 14px;
   width: 80%;
   margin: auto;
   text-align: center;
@@ -312,22 +406,20 @@ input[type=range] {
   background-color: #ffffff;
 }
 
+.main-container .card .block3 img {
+  display: block;
+  width: 25px;
+  height: 25px;
+  margin: auto;
+  margin-bottom: 40px;
+}
+
 .main-container .card .block3 img:first-child {
   display: block;
-  width: 18px;
-  height: 18px;
-  border-radius: 50%;
+  width: 25px;
+  height: 25px;
   margin: auto;
   margin-top: 25px;
   margin-bottom: 200px;
-}
-
-.main-container .card .block3 img {
-  display: block;
-  width: 18px;
-  height: 18px;
-  border-radius: 50%;
-  margin: auto;
-  margin-top: 50px;
 }
 /*# sourceMappingURL=styles.css.map */
